# voxel-smoothing-2d

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: FindGLM.cmake  FindSFML.cmake  UseGLM.cmake  UseSFML.cmake
src/: blocks.cpp  blocks.h  detail.cpp  detail.h  draw.cpp  draw.h  field.cpp  field.h  main.cpp  points.cpp  points.h
